--- a/css/styles.css
+++ b/css/styles.css
@@ -37,6 +37,10 @@
     border-right: 5px solid var(--bio-border-color);
 }
 
+#bio-image {
+    object-fit: cover;
+}
+
 #about-container {
     flex: 1 1 80%;
     min-height: 100vh;
@@ -170,6 +174,7 @@
     flex: 1 1 33%;
     max-width: 33%;
     margin-bottom: 35px;
+    font-size: 14px;
 }
 
 .skills-title {
@@ -183,6 +188,10 @@
 .skills-box i {
     font-size: 45px;
     margin-right: 10px;
+}
+
+.icon-img {
+    width: 200px;
 }
 
 /* Mobile */
